添加 Mermaid 图表支持功能
- 在主配置文件中启用 Mermaid 并设置主题为 neutral
- 添加 hexo-filter-mermaid-diagrams 依赖包
- 在 cactus 主题配置中启用 Mermaid 支持
- 在主题 head 模板中添加 Mermaid CDN 脚本引用和初始化代码
- 添加 Mermaid 本地库文件

--- a/_config.yml
+++ b/_config.yml
@@ -101,6 +101,10 @@ theme: cactus
 theme_config:
   colorscheme: light
   highlight: googlecode
+  mermaid:
+    enabled: true
+    # default | dark | forest | neutral
+    theme: neutral
   social_links:
     -
       icon: github
